EXTRA_DIST = background.shtml    \
             benchmark.shtml     \
             doc.shtml           \
             download.shtml      \
             faq.shtml           \
             header.shtml        \
             footer.shtml        \
             index.shtml         \
             NUBinterface.shtml  \
             UBinterface.shtml   \
             bspline_logo.png    \
             c-BN300y.png        \
             NUBsplineBasis.png  \
             UBsplineBasis.png   \
             F77nonuniform.shtml \
             F77uniform.shtml    \
             links.shtml         \
             news.shtml

